apps/routers/talos-related-routes/inactive/ruby-stats/ruby-stats-service-endpoints.yaml
kind: Service
apiVersion: v1
metadata:
  name: ruby-stats
  namespace: traefik-staging
spec:
  ports:
    - name: public-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 0
    - name: public-https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 0
---
kind: Endpoints
apiVersion: v1
metadata:
  name: ruby-stats
  namespace: traefik-staging
subsets:
- addresses:
  - ip: 10.17.12.202
  ports:
  - port: 80
    name: public-http
  - port: 443
    name: public-https
