apps/routers/talos-related-routes/inactive/ruby-stats/ruby-stats-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ruby-stats
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`ruby.hephy.pro`) || Host(`stats.hephy.pro`)
    services:
    - kind: Service
      name: ruby-stats
      namespace: traefik-staging
      port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ruby-stats
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`ruby.hephy.pro`) || HostSNI(`stats.hephy.pro`)
    services:
    - name: ruby-stats
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
